# custom_pylint

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: core.yml
src/custom_pylint/: silent_exception_checker.py
src/custom_pylint/tests/: test_silent_exception_checker.py
